# FilesStats

./: CMakeLists.txt  FileStats  README.md  ReadDictionary.cpp  ReadDictionary.h  ReadDirectory.cpp  ReadDirectory.h  ReadFile.cpp  ReadFile.h  a.out  main.cpp
TEST/: CMakeLists.txt  ReadDirectory.cpp  ReadDirectory.h  ReadFile.cpp  main.cpp
